--- a/src/virusapplicatie/VirusGUI.form
+++ b/src/virusapplicatie/VirusGUI.form
@@ -187,6 +187,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Open"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
